--- a/templates/blog/index.html.twig
+++ b/templates/blog/index.html.twig
@@ -1,6 +1,6 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Hello BlogController!{% endblock %}
+{% block title %}Hello Ctrler!{% endblock %}
 
 {% block body %}
 <style>
@@ -9,7 +9,7 @@
 </style>
 
 <div class="example-wrapper">
-    <h1>Hello {{ controller_name }}! ✅</h1>
+    <h1>Actuellement sur le Controller {{ controller_name }} ✅</h1>
 
     This friendly message is coming from:
     <ul>
