--- a/templates/blog/category.html.twig
+++ b/templates/blog/category.html.twig
@@ -6,7 +6,7 @@
     <h1>All articles from article s table : </h1>
     {% for article in articles %}
         <div>
-            <h2>{{ loop.index }} / {{ article.title }} - Category : {{ article.category.name }}</h2>
+            <h2>{{ article.id }} / {{ article.title }} - Category : {{ category }}</h2>
             <p>{{ article.content }}</p>
             <a href="{{ path('blog_show', { 'slug': article.title|replace({" ":"-"})|lower  }) }}">En savoir plus</a>
         </div>
