--- a/templates/blog/show.html.twig
+++ b/templates/blog/show.html.twig
@@ -1,14 +1,19 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Article{% endblock %}
+{% block title %}{{ slug }}{% endblock %}
+
+{% block stylesheets %}{% endblock %}
 
 {% block body %}
-<style>
-    .example-wrapper { margin: 1em auto; max-width: 800px; width: 95%; font: 18px/1.5 sans-serif; }
-    .example-wrapper code { background: #F5F5F5; padding: 2px 6px; }
-</style>
 
-<div class="example-wrapper">
-    <h1>Titre de l'article : {{readable}}</h1>
+<div>
+    <h1>Real article s title : {{ article.title }}</h1>
+    <h2>Category : {{ article.category.name }}</h2>
+    <p>{{ article.content }}</p>
 </div>
+
+<a href="{{ path('app_index') }}">
+    Back to homepage.
+</a>
+
 {% endblock %}
