--- a/templates/default/index.html.twig
+++ b/templates/default/index.html.twig
@@ -17,4 +17,12 @@
         <li>Your template at <code><a href="{{ '/home/wilder/Documents/wcs_weeks/Week11/PHP/Symfony/blog/templates/default/index.html.twig'|file_link(0) }}">templates/default/index.html.twig</a></code></li>
     </ul>
 </div>
+
+<a href="{{ path('blog_show', { 'slug': "javascript-vs-php" }) }}">
+    Testing show() method from BlogController with a real article s slug.
+</a>
+<br>
+<a href="{{ path('blog_index') }}">
+    Testing index() method from BlogController to view all articles.
+</a>
 {% endblock %}
