Sf 10 forms w/ Bootstrap theme

--- a/templates/blog/category.html.twig
+++ b/templates/blog/category.html.twig
@@ -13,7 +13,7 @@
     {% else %}
         Aucun article trouvé.
     {% endfor %}
-    <a href="{{ path('app_index') }}">
+    <a href="{{ path('blog_index') }}">
       Back to homepage.
     </a>
 {% endblock %}
