--- a/templates/blog/index.html.twig
+++ b/templates/blog/index.html.twig
@@ -3,10 +3,18 @@
 {% block title %}All articles{% endblock %}
 
 {% block body %}
-    <button><a href="{{ path('blog_show_category', { 'categoryName': 'javascript'}) }} ">JavaScript</a></button>
-    <button><a href="{{ path('blog_show_category', { 'categoryName': 'java'}) }} ">Java</a></button>
-    <button><a href="{{ path('blog_show_category', { 'categoryName': 'c'}) }} ">C</a></button>
+    {% for category in categories %}
+        <button><a href="{{ path('blog_show_category', { 'categoryName': category.name }) }} ">{{ category.name }}</a></button>
+    {% endfor %}
+    {# </br>
     </br>
+    {{ form_start(form) }}
+        {{ form_row(form.searchField) }}
+        <button type="submit" name="btnSearch">Rechercher</button>
+    {{ form_end(form) }}
+    </br> #}
+    </br>
+    <button><a href="{{ path('category_create') }}">Create a category</a></button>
     <h1>All articles from article s table : </h1>
     {% for article in articles %}
         <div>
