--- a/templates/blog/tag.html.twig
+++ b/templates/blog/tag.html.twig
@@ -1,12 +1,12 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}All articles{% endblock %}
+{% block title %}All articles from tag{% endblock %}
 
 {% block body %}
-    <h1>All articles from the {{ category }} category: </h1>
+    <h1>All articles from the {{ tagName }} tag: </h1>
     {% for article in articles %}
         <div>
-            <h2>{{ article.id }} / {{ article.title }} - Category : {{ category }}</h2>
+            <h2>{{ article.id }} / {{ article.title }} - Tag : {{ tagName }}</h2>
             <p>{{ article.content }}</p>
             <a href="{{ path('blog_show', { 'slug': article.title|replace({" ":"-"})|lower  }) }}">En savoir plus</a>
         </div>
