--- a/templates/blog/category.html.twig
+++ b/templates/blog/category.html.twig
@@ -10,8 +10,14 @@
             <p>{{ article.content }}</p>
             <a href="{{ path('blog_show', { 'slug': article.title|replace({" ":"-"})|lower  }) }}">En savoir plus</a>
         </div>
+        <p><small>If u wanna remove this category, you must have to change all these articles to another category.</small></p>
     {% else %}
         Aucun article trouvé.
+        <form method="post" action="{{ path('category_delete', {'id': articles.owner.id}) }}" onsubmit="return confirm('Are you sure you want to delete this category?');">
+            <input type="hidden" name="_method" value="DELETE">
+            <input type="hidden" name="_token" value="{{ csrf_token('delete' ~ articles.owner.id) }}">
+            <button class="btn">Delete</button>
+        </form>
     {% endfor %}
     <a href="{{ path('blog_index') }}">
       Back to homepage.
