--- a/templates/article/index.html.twig
+++ b/templates/article/index.html.twig
@@ -35,7 +35,7 @@
 
     <a href="{{ path('article_new') }}">Create new</a>
     </br>
-    <a href="{{ path('blog_index') }}">
-      Back to homepage.
-    </a>
+    <button class="btn btn-secondary mt-2 mb-2"><a href="{{ path('app_index') }}">
+        Back to homepage.
+    </a></button>
 {% endblock %}
