--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -3,11 +3,12 @@
     <head>
         <meta charset="UTF-8">
         <title>{% block title %}Welcome!{% endblock %}</title>
-        {% block stylesheets %}
              {{ encore_entry_link_tags('app') }}
+        {% block stylesheets %}
         {% endblock %}
     </head>
     <body>
+        {% include 'navbar.html.twig' %}
         {% block body %}{% endblock %}
             {{ encore_entry_script_tags('app') }}
         {% block javascripts %}{% endblock %}
