--- a/templates/article/_form.html.twig
+++ b/templates/article/_form.html.twig
@@ -1,4 +1,8 @@
-{{ form_start(form) }}
-    {{ form_widget(form) }}
-    <button class="btn">{{ button_label|default('Save') }}</button>
-{{ form_end(form) }}
+<div class="row">
+    <div class="col-sm-5 col-10 offset-1">
+        {{ form_start(form) }}
+            {{ form_widget(form) }}
+            <button class="btn btn-info">{{ button_label|default('Save') }}</button>
+        {{ form_end(form) }}
+    </div>      
+</div>
