--- a/templates/blog/category.html.twig
+++ b/templates/blog/category.html.twig
@@ -19,7 +19,7 @@
             <button class="btn">Delete</button>
         </form>
     {% endfor %}
-    <a href="{{ path('blog_index') }}">
-      Back to homepage.
-    </a>
+    <button class="btn btn-secondary mt-2 mb-2"><a href="{{ path('app_index') }}">
+        Back to homepage.
+    </a></button>
 {% endblock %}
