--- a/templates/blog/create.html.twig
+++ b/templates/blog/create.html.twig
@@ -5,9 +5,13 @@
 {% form_theme form 'bootstrap_4_layout.html.twig' %}
 
 {% block body %}
-    {{ form_start(form) }}
-        {{ form_row(form.name) }}
-        <button class="btn">{{ button_label|default('Save') }}</button>
-    {{ form_end(form) }}
-    <a href="{{ path('blog_index') }}">Back to homepage.</a>
+<div class="row">
+    <div class="col-sm-5 col-10 offset-1">
+        {{ form_start(form) }}
+            {{ form_row(form.name) }}
+            <button class="btn btn-info">{{ button_label|default('Save') }}</button>
+        {{ form_end(form) }}
+        <a href="{{ path('blog_index') }}">Back to homepage.</a>
+    </div>
+</div>
 {% endblock %}
