--- a/templates/blog/index.html.twig
+++ b/templates/blog/index.html.twig
@@ -8,7 +8,7 @@
     {% endfor %}
     </br>
     <button class="btn btn-secondary mt-2 mb-2"><a href="{{ path('category_create') }}">Create a category</a></button>
-    <h1>All articles from article s table : </h1>
+    <h1>All articles from article table : </h1>
     {% for article in articles %}
         <div>
             <h2>{{ loop.index }} / {{ article.title }} - Category : {{ article.category.name }}</h2>
