--- a/templates/navbar.html.twig
+++ b/templates/navbar.html.twig
@@ -10,6 +10,14 @@
             <li class="nav-item">
                 <a class="nav-link" href="{{ path('blog_index') }}">Home</a>
             </li>
+            <li class="nav-item">
+            {% if app.user %}
+                Bonjour {{ app.user.email }} !
+                <a class="nav-link" href="{{ path('app_logout') }}"> Se déconnecter</a>
+            {% else %}
+                <a class="nav-link" href="{{ path('app_login') }}"> Se connecter</a>
+            {% endif %}
+            </li>
         </ul>
         <form class="form-inline my-2 my-lg-0">
         <input class="form-control mr-sm-2" type="text" placeholder="Search">
