--- a/templates/blog/show.html.twig
+++ b/templates/blog/show.html.twig
@@ -21,6 +21,11 @@
                 <li>No tags for this article</li>
             {% endfor %}
         </ul>
+        {% if is_granted('ROLE_AUTHOR') %}
+        <button class="btn btn-primary mt-2 mb-2">
+            <a href="{{ path('article_edit', { 'id': article.id} ) }}">Éditer</a>
+        </button>
+        {%endif%}
         <button class="btn btn-secondary mt-2 mb-2"><a href="{{ path('app_index') }}">
             Back to homepage.
         </a></button>
