--- a/templates/navbar.html.twig
+++ b/templates/navbar.html.twig
@@ -13,9 +13,9 @@
             <li class="nav-item">
             {% if app.user %}
                 Bonjour {{ app.user.email }} !
-                <a class="nav-link" href="{{ path('app_logout') }}"> Se déconnecter</a>
+                <a class="nav-link" href="{{ path('app_logout') }}">Log out</a>
             {% else %}
-                <a class="nav-link" href="{{ path('app_login') }}"> Se connecter</a>
+                <a class="nav-link" href="{{ path('app_login') }}">Log in</a>
             {% endif %}
             </li>
         </ul>
