Sf quest flash (+ session?) done

--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -9,6 +9,13 @@
     </head>
     <body>
         {% include 'navbar.html.twig' %}
+{% for category, messages in app.flashes %}
+    {% for message in messages %}
+        <div class="alert alert-{{ category }}">
+            {{ message }}
+        </div>
+    {% endfor %}
+{% endfor %}
         {% block body %}{% endblock %}
             {{ encore_entry_script_tags('app') }}
         {% block javascripts %}{% endblock %}
